[gd_scene load_steps=2 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = -200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "PROJECT SUMMONER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="CollectionButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "COLLECTION"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="PlaceholderPopup" type="AcceptDialog" parent="."]
title = "Coming Soon"
initial_position = 2
size = Vector2i(400, 150)
dialog_text = "This feature is not yet implemented.

PLACEHOLDER - Coming in future update"
dialog_autowrap = true

[connection signal="pressed" from="MenuButtons/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuButtons/CollectionButton" to="." method="_on_collection_pressed"]
[connection signal="pressed" from="MenuButtons/SettingsButton" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MenuButtons/QuitButton" to="." method="_on_quit_pressed"]
